# dagview

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
assets/: manifest.small.json
src/: main.ts  types.d.ts  wasmPack.ts
src/client/: local.ts
src/demo/: BatchedEdgeRenderer.ts  Demo.ts  GraphEdge.ts  GraphNode.ts  PowerGraph.ts
src/demo/powerGraphs/: Cluster.ts  SimilarityMatrix.ts
src/engine/: Camera.ts  Engine.ts  Raycaster.ts  RenderEngine.ts  RenderLoop.ts  Resources.ts
src/engine/interface/: OwnerFilterUI.ts  SearchUI.ts  info.scss  owner-filter.scss  search.scss
src/wasm/powergraph/: .gitignore  Cargo.toml  powergraph.manifest.small.json
src/wasm/powergraph/src/: cluster_repository.rs  clusters.rs  edge_repository.rs  lib.rs  main.rs  sets.rs  similarity_matrix.rs  unordered_tuple.rs
src/wasm/powergraph/tests/: web.rs
