[package]
name = "powergraph"
version = "0.1.0"
edition = "2021"

authors = ["Nicholas Yager <yager@nicholasyager.com>"]
description = "PowerGraph decomposition"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
itertools = "0.13.0"
log = "0.4.22"
simple_logger = "5.0.0"
serde_json = "1.0.120"

[dependencies.web-sys]
version = "0.3.69"
features = ['console']


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
